Add custom float grids

--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -1,5 +1,6 @@
 @import 'abstracts/functions', 'abstracts/mixins', 'abstracts/variables';
 @import 'base/animations', 'base/base', 'base/typography', 'base/utilities';
 @import 'components/button';
+@import 'layout/grid';
 @import 'layout/header';
 @import 'pages/home';
