--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -1,5 +1,5 @@
 @import 'abstracts/functions', 'abstracts/mixins', 'abstracts/variables';
 @import 'base/animations', 'base/base', 'base/typography', 'base/utilities';
-@import 'components/button', 'components/composition';
+@import 'components/button', 'components/composition', 'components/feature-box';
 @import 'layout/grid', 'layout/header';
 @import 'pages/home';
