--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -1,6 +1,6 @@
 @import 'abstracts/functions', 'abstracts/mixins', 'abstracts/variables';
 @import 'base/animations', 'base/base', 'base/typography', 'base/utilities';
 @import 'components/button', 'components/composition', 'components/feature-box',
-  'components/card';
+  'components/card', 'components/story', 'components/bg-video';
 @import 'layout/grid', 'layout/header';
 @import 'pages/home';
