Add booking section of natours

--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -13,7 +13,7 @@
     backface-visibility: hidden;
     font-size: 2rem;
     height: 52rem;
-    border-radius: 3px;
+    border-radius: $default-border-radius;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
     transition: all 0.8s ease;
@@ -66,8 +66,8 @@
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    border-top-right-radius: 3px;
-    border-top-left-radius: 3px;
+    border-top-right-radius: $default-border-radius;
+    border-top-left-radius: $default-border-radius;
 
     &--1 {
       background-image: linear-gradient(
