--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -12,11 +12,16 @@ $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
+$color-grey-dark-2: #999;
+
 $color-white: #fff;
 $color-black: #000;
 
 // FONT SIZES
 $default-font-size: 1.6rem;
+
+// BORDER RADIUS
+$default-border-radius: 3px;
 
 // GRID
 $grid-width: 114rem;
