--- a/Natours/sass/components/_story.scss
+++ b/Natours/sass/components/_story.scss
@@ -5,7 +5,7 @@
   padding-left: 9rem;
   box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
   background-color: rgba($color-white, 0.6);
-  border-radius: 3px;
+  border-radius: $default-border-radius;
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
