--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -160,12 +160,9 @@
 
   // BACK SIDE STYLING
   &__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    @include center-hr-and-ver;
     width: 90%;
     text-align: center;
-    transform: translate(-50%, -50%);
   }
 
   &__price-box {
