--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -3,5 +3,5 @@
 @import 'components/button', 'components/composition', 'components/feature-box',
   'components/card', 'components/story', 'components/bg-video',
   'components/form';
-@import 'layout/grid', 'layout/header', 'layout/footer';
+@import 'layout/navigation', 'layout/grid', 'layout/header', 'layout/footer';
 @import 'pages/home';
