Add popup to natours

--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -2,6 +2,6 @@
 @import 'base/animations', 'base/base', 'base/typography', 'base/utilities';
 @import 'components/button', 'components/composition', 'components/feature-box',
   'components/card', 'components/story', 'components/bg-video',
-  'components/form';
+  'components/form', 'components/popup';
 @import 'layout/navigation', 'layout/grid', 'layout/header', 'layout/footer';
 @import 'pages/home';
