--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -1,5 +1,4 @@
 body {
-  padding: 3rem;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   /* font-size: 16px; */
@@ -20,6 +19,11 @@ body {
     letter-spacing: 3.5rem;
     margin-right: -3.5rem;
     animation: moveInLeft 1s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &--sub {
@@ -29,6 +33,10 @@ body {
     letter-spacing: 1.75rem;
     margin-right: -1.75rem;
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -47,6 +55,16 @@ body {
   background-clip: text;
   color: transparent;
   transition: all 0.2s;
+
+  @include respond(tab-port) {
+    margin-top: 3rem;
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    margin-top: 2.5rem;
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
