--- a/Natours/sass/layout/_footer.scss
+++ b/Natours/sass/layout/_footer.scss
@@ -4,6 +4,10 @@
   padding: 10rem 0;
   font-size: 1.4rem;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
   }
@@ -15,6 +19,11 @@
 
   &__navigation {
     padding-top: 2rem;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -53,5 +62,11 @@
     width: 75%;
     float: right;
     text-align: right;
+
+    @include respond(tab-port) {
+      width: 100%;
+      float: none;
+      text-align: center;
+    }
   }
 }
