--- a/Trillo/sass/_components.scss
+++ b/Trillo/sass/_components.scss
@@ -271,8 +271,17 @@
   cursor: pointer;
   transition: all 0.2s;
 
+  & span {
+    margin-left: 3px;
+  }
+
   &:hover {
     color: var(--color-grey-dark-1);
+
+    span {
+      margin-left: 8px;
+      transition: margin-left 0.2s;
+    }
   }
 
   &:focus {
@@ -367,5 +376,68 @@
     &:not(:last-child) {
       margin-right: -1.5rem;
     }
+  }
+}
+
+////////////////////////////
+// REVIEWS ////////////////
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    content: '\201C';
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    font-size: 20rem;
+    line-height: 1;
+    font-family: sans-serif;
+    color: var(--color-grey-light-2);
+  }
+
+  &__text {
+    position: relative;
+    margin-bottom: 1.8rem;
+  }
+
+  &__user {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__photo {
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+  }
+
+  &__user-box {
+    margin-right: auto;
+    padding: 1.6rem;
+  }
+
+  &__user-name {
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+
+  &__user-date {
+    font-size: 1.1rem;
+    color: var(--color-grey-dark-3);
+  }
+
+  &__rating {
+    font-size: 2.25rem;
+    font-weight: 300;
+    color: var(--color-primary);
   }
 }
